[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
mongodb = "2.7.1"
axum = "0.7.2"
jsonwebtoken = "9.2.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
